<?xml version="1.0"?>
<package>
  <name>robot_sim_diff_drive_rbs</name>
  <version>0.0.1</version>
  <description>The robot_sim_diff_drive_rbs package</description>

  <!-- Maintainer -->
  <maintainer email="sousa.ricardob@outlook.com">Ricardo B. Sousa</maintainer>

  <!-- License -->
  <license>GPLv3</license>

  <!-- Wiki -->
  <!-- <url type="website">http://wiki.ros.org/robot_sim_diff_drive_rbs</url> -->

  <!-- Author -->
  <author email="sousa.ricardob@outlook.com">Ricardo B. Sousa</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
</package>
